<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bases.ActivityAfterCheck"
    tools:openDrawer="start">
<androidx.viewpager.widget.ViewPager
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_nav"></FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
...
