...
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardG"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_below="@+id/cardFa"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@android:color/transparent">

...
